@@ -19,32 +19,35 @@ package org.apache.ignite.internal.catalog;
 
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.concurrent.CompletableFuture.failedFuture;
-import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAddColumnParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAlterColumnParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateAlterZoneParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateHashIndexParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateSortedIndexParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateTableParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateCreateZoneParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropColumnParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropIndexParams;
+import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropTableParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateDropZoneParams;
 import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateRenameZoneParams;
-import static org.apache.ignite.internal.catalog.CatalogParamsValidationUtils.validateZoneDataNodesAutoAdjustParametersCompatibility;
-import static org.apache.ignite.internal.catalog.commands.CatalogUtils.DEFAULT_FILTER;
-import static org.apache.ignite.internal.catalog.commands.CatalogUtils.INFINITE_TIMER_VALUE;
+import static org.apache.ignite.internal.catalog.commands.CatalogUtils.fromParams;
+import static org.apache.ignite.internal.catalog.commands.CatalogUtils.fromParamsAndPreviousValue;
 import static org.apache.ignite.lang.ErrorGroups.Sql.STMT_VALIDATION_ERR;
 import static org.apache.ignite.lang.IgniteStringFormatter.format;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.NavigableMap;
 import java.util.Objects;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.function.LongSupplier;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import org.apache.ignite.internal.catalog.commands.AbstractCreateIndexCommandParams;
 import org.apache.ignite.internal.catalog.commands.AlterColumnParams;
 import org.apache.ignite.internal.catalog.commands.AlterTableAddColumnParams;
 import org.apache.ignite.internal.catalog.commands.AlterTableDropColumnParams;
@@ -62,6 +65,7 @@ import org.apache.ignite.internal.catalog.commands.RenameZoneParams;
 import org.apache.ignite.internal.catalog.descriptors.CatalogHashIndexDescriptor;
 import org.apache.ignite.internal.catalog.descriptors.CatalogIndexDescriptor;
 import org.apache.ignite.internal.catalog.descriptors.CatalogSchemaDescriptor;
+import org.apache.ignite.internal.catalog.descriptors.CatalogSortedIndexDescriptor;
 import org.apache.ignite.internal.catalog.descriptors.CatalogTableColumnDescriptor;
 import org.apache.ignite.internal.catalog.descriptors.CatalogTableDescriptor;
 import org.apache.ignite.internal.catalog.descriptors.CatalogZoneDescriptor;
@@ -89,13 +93,16 @@ import org.apache.ignite.internal.distributionzones.DistributionZoneNotFoundExce
 import org.apache.ignite.internal.hlc.HybridTimestamp;
 import org.apache.ignite.internal.logger.IgniteLogger;
 import org.apache.ignite.internal.logger.Loggers;
+import org.apache.ignite.internal.manager.EventListener;
 import org.apache.ignite.internal.manager.Producer;
 import org.apache.ignite.internal.util.PendingComparableValuesTracker;
 import org.apache.ignite.lang.ColumnAlreadyExistsException;
 import org.apache.ignite.lang.ColumnNotFoundException;
-import org.apache.ignite.lang.ErrorGroups;
 import org.apache.ignite.lang.ErrorGroups.Common;
 import org.apache.ignite.lang.ErrorGroups.DistributionZones;
+import org.apache.ignite.lang.ErrorGroups.Index;
+import org.apache.ignite.lang.ErrorGroups.Table;
+import org.apache.ignite.lang.IgniteException;
 import org.apache.ignite.lang.IgniteInternalException;
 import org.apache.ignite.lang.IndexAlreadyExistsException;
 import org.apache.ignite.lang.IndexNotFoundException;
@@ -167,15 +174,9 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
                 new CatalogIndexDescriptor[0]
         );
 
-        CatalogZoneDescriptor defaultZone = new CatalogZoneDescriptor(
+        CatalogZoneDescriptor defaultZone = fromParams(
                 objectIdGen++,
-                DEFAULT_ZONE_NAME,
-                25,
-                1,
-                INFINITE_TIMER_VALUE,
-                INFINITE_TIMER_VALUE,
-                INFINITE_TIMER_VALUE,
-                DEFAULT_FILTER
+                CreateZoneParams.builder().zoneName(DEFAULT_ZONE_NAME).build()
         );
 
         registerCatalog(new Catalog(0, 0L, objectIdGen, List.of(defaultZone), List.of(schemaPublic)));
@@ -253,13 +254,23 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     }
 
     @Override
-    public CatalogZoneDescriptor zone(String zoneName, long timestamp) {
+    public @Nullable CatalogZoneDescriptor zone(String zoneName, long timestamp) {
         return catalogAt(timestamp).zone(zoneName);
     }
 
     @Override
-    public CatalogZoneDescriptor zone(int zoneId, long timestamp) {
+    public @Nullable CatalogZoneDescriptor zone(int zoneId, long timestamp) {
         return catalogAt(timestamp).zone(zoneId);
+    }
+
+    @Override
+    public @Nullable CatalogZoneDescriptor zone(int zoneId, int catalogVersion) {
+        return catalog(catalogVersion).zone(zoneId);
+    }
+
+    @Override
+    public Collection<CatalogZoneDescriptor> zones(int catalogVersion) {
+        return catalog(catalogVersion).zones();
     }
 
     @Override
@@ -304,21 +315,19 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> createTable(CreateTableParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateCreateTableParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
-            if (schema.table(params.tableName()) != null) {
-                throw new TableAlreadyExistsException(schema.name(), params.tableName());
-            }
-
-            validateCreateTableParams(params);
+            ensureNoTableOrIndexExistsWithSameName(schema, params.tableName());
 
             CatalogZoneDescriptor zone = getZone(catalog, Objects.requireNonNullElse(params.zone(), DEFAULT_ZONE_NAME));
 
             int id = catalog.objectIdGenState();
 
-            CatalogTableDescriptor table = CatalogUtils.fromParams(id++, zone.id(), params);
+            CatalogTableDescriptor table = fromParams(id++, zone.id(), params);
 
-            CatalogHashIndexDescriptor pkIndex = createHashIndexDescriptor(table, id++, createPkIndexParams(params));
+            CatalogIndexDescriptor pkIndex = createPkIndex(table, id++, createPkIndexParams(params));
 
             return List.of(
                     new NewTableEntry(table),
@@ -331,6 +340,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> dropTable(DropTableParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateDropTableParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -349,11 +360,9 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
     @Override
     public CompletableFuture<Void> addColumn(AlterTableAddColumnParams params) {
-        if (params.columns().isEmpty()) {
-            return completedFuture(null);
-        }
-
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateAddColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -365,7 +374,7 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
                     throw new ColumnAlreadyExistsException(col.name());
                 }
 
-                columnDescriptors.add(CatalogUtils.fromParams(col));
+                columnDescriptors.add(fromParams(col));
             }
 
             return List.of(
@@ -376,16 +385,14 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
     @Override
     public CompletableFuture<Void> dropColumn(AlterTableDropColumnParams params) {
-        if (params.columns().isEmpty()) {
-            return completedFuture(null);
-        }
-
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateDropColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
 
-            validateAlterTableDropColumnParams(params, schema, table);
+            ensureColumnCanBeDropped(schema, table, params);
 
             return List.of(
                     new DropColumnsEntry(table.id(), params.columns())
@@ -396,6 +403,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> alterColumn(AlterColumnParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateAlterColumnParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
@@ -406,7 +415,7 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
             if (origin.equals(target)) {
                 // No modifications required.
-                return Collections.emptyList();
+                return List.of();
             }
 
             boolean isPkColumn = table.isPrimaryKeyColumn(origin.name());
@@ -422,15 +431,17 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> createIndex(CreateHashIndexParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateCreateHashIndexParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
-            if (schema.index(params.indexName()) != null) {
-                throw new IndexAlreadyExistsException(schema.name(), params.indexName());
-            }
+            ensureNoTableOrIndexExistsWithSameName(schema, params.indexName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
 
-            CatalogHashIndexDescriptor index = createHashIndexDescriptor(table, catalog.objectIdGenState(), params);
+            validateIndexColumns(table, params);
+
+            CatalogHashIndexDescriptor index = fromParams(catalog.objectIdGenState(), table.id(), params);
 
             return List.of(
                     new NewIndexEntry(index),
@@ -442,17 +453,17 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> createIndex(CreateSortedIndexParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateCreateSortedIndexParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
-            if (schema.index(params.indexName()) != null) {
-                throw new IndexAlreadyExistsException(schema.name(), params.indexName());
-            }
+            ensureNoTableOrIndexExistsWithSameName(schema, params.indexName());
 
             CatalogTableDescriptor table = getTable(schema, params.tableName());
 
-            validateCreateSortedIndexParams(params, table);
+            validateIndexColumns(table, params);
 
-            CatalogIndexDescriptor index = CatalogUtils.fromParams(catalog.objectIdGenState(), table.id(), params);
+            CatalogSortedIndexDescriptor index = fromParams(catalog.objectIdGenState(), table.id(), params);
 
             return List.of(
                     new NewIndexEntry(index),
@@ -464,6 +475,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
     @Override
     public CompletableFuture<Void> dropIndex(DropIndexParams params) {
         return saveUpdateAndWaitForActivation(catalog -> {
+            validateDropIndexParams(params);
+
             CatalogSchemaDescriptor schema = getSchema(catalog, params.schemaName());
 
             CatalogIndexDescriptor index = schema.index(params.indexName());
@@ -487,7 +500,7 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
                 throw new DistributionZoneAlreadyExistsException(params.zoneName());
             }
 
-            CatalogZoneDescriptor zone = CatalogUtils.fromParams(catalog.objectIdGenState(), params);
+            CatalogZoneDescriptor zone = fromParams(catalog.objectIdGenState(), params);
 
             return List.of(
                     new NewZoneEntry(zone),
@@ -548,7 +561,8 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
                     zone.dataNodesAutoAdjust(),
                     zone.dataNodesAutoAdjustScaleUp(),
                     zone.dataNodesAutoAdjustScaleDown(),
-                    zone.filter()
+                    zone.filter(),
+                    zone.dataStorage()
             );
 
             return List.of(new AlterZoneEntry(descriptor));
@@ -562,37 +576,7 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
 
             CatalogZoneDescriptor zone = getZone(catalog, params.zoneName());
 
-            Integer dataNodesAutoAdjust = Objects.requireNonNullElse(
-                    params.dataNodesAutoAdjust(),
-                    zone.dataNodesAutoAdjust()
-            );
-
-            Integer dataNodesAutoAdjustScaleUp = Objects.requireNonNullElse(
-                    params.dataNodesAutoAdjustScaleUp(),
-                    zone.dataNodesAutoAdjustScaleUp()
-            );
-
-            Integer dataNodesAutoAdjustScaleDown = Objects.requireNonNullElse(
-                    params.dataNodesAutoAdjustScaleDown(),
-                    zone.dataNodesAutoAdjustScaleDown()
-            );
-
-            validateZoneDataNodesAutoAdjustParametersCompatibility(
-                    dataNodesAutoAdjust,
-                    dataNodesAutoAdjustScaleUp,
-                    dataNodesAutoAdjustScaleDown
-            );
-
-            CatalogZoneDescriptor descriptor = new CatalogZoneDescriptor(
-                    zone.id(),
-                    zone.name(),
-                    Objects.requireNonNullElse(params.partitions(), zone.partitions()),
-                    Objects.requireNonNullElse(params.replicas(), zone.replicas()),
-                    dataNodesAutoAdjust,
-                    dataNodesAutoAdjustScaleUp,
-                    dataNodesAutoAdjustScaleDown,
-                    Objects.requireNonNullElse(params.filter(), zone.filter())
-            );
+            CatalogZoneDescriptor descriptor = fromParamsAndPreviousValue(params, zone);
 
             return List.of(new AlterZoneEntry(descriptor));
         });
@@ -771,155 +755,6 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
         );
     }
 
-    private static void validateCreateTableParams(CreateTableParams params) {
-        // Table must have columns.
-        if (params.columns().isEmpty()) {
-            throw new IgniteInternalException(ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR, "Table must include at least one column.");
-        }
-
-        // Column names must be unique.
-        params.columns().stream()
-                .map(ColumnParams::name)
-                .filter(Predicate.not(new HashSet<>()::add))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Can't create table with duplicate columns: {}",
-                            params.columns().stream().map(ColumnParams::name).collect(joining(", "))
-                    );
-                });
-
-        // Table must have PK columns.
-        if (params.primaryKeyColumns().isEmpty()) {
-            throw new IgniteInternalException(
-                    ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                    "Table without primary key is not supported."
-            );
-        }
-
-        // PK columns must be valid columns.
-        Set<String> columns = params.columns().stream().map(ColumnParams::name).collect(Collectors.toSet());
-        params.primaryKeyColumns().stream()
-                .filter(Predicate.not(columns::contains))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Invalid primary key columns: {}",
-                            params.columns().stream().map(ColumnParams::name).collect(joining(", "))
-                    );
-                });
-
-        // PK column names must be unique.
-        params.primaryKeyColumns().stream()
-                .filter(Predicate.not(new HashSet<>()::add))
-                .findAny()
-                .ifPresent(columnName -> {
-                    throw new IgniteInternalException(
-                            ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                            "Primary key columns contains duplicates: {}",
-                            String.join(", ", params.primaryKeyColumns())
-                    );
-                });
-
-        List<String> colocationCols = params.colocationColumns();
-        if (colocationCols != null) {
-            // Colocation columns must be unique
-            colocationCols.stream()
-                    .filter(Predicate.not(new HashSet<>()::add))
-                    .findAny()
-                    .ifPresent(columnName -> {
-                        throw new IgniteInternalException(
-                                ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                                "Colocation columns contains duplicates: {}",
-                                String.join(", ", colocationCols)
-                        );
-                    });
-
-            // Colocation column must be valid PK column
-            Set<String> pkColumns = new HashSet<>(params.primaryKeyColumns());
-            List<String> outstandingColumns = colocationCols.stream()
-                    .filter(Predicate.not(pkColumns::contains))
-                    .collect(Collectors.toList());
-            if (!outstandingColumns.isEmpty()) {
-                throw new IgniteInternalException(
-                        ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                        "Colocation columns must be subset of primary key: outstandingColumns=" + outstandingColumns);
-            }
-        }
-    }
-
-    private static void validateAlterTableDropColumnParams(
-            AlterTableDropColumnParams params,
-            CatalogSchemaDescriptor schema,
-            CatalogTableDescriptor table
-    ) {
-        for (String columnName : params.columns()) {
-            if (table.column(columnName) == null) {
-                throw new ColumnNotFoundException(schema.name(), params.tableName(), columnName);
-            }
-
-            if (table.isPrimaryKeyColumn(columnName)) {
-                throw new SqlException(
-                        STMT_VALIDATION_ERR,
-                        "Can't drop primary key column: [name=" + columnName + ']'
-                );
-            }
-        }
-
-        Arrays.stream(schema.indexes())
-                .filter(index -> index.tableId() == table.id())
-                .forEach(index -> params.columns().stream()
-                        .filter(index::hasColumn)
-                        .findAny()
-                        .ifPresent(columnName -> {
-                            throw new SqlException(
-                                    STMT_VALIDATION_ERR,
-                                    format("Can't drop indexed column: [columnName={}, indexName={}]", columnName, index.name()));
-                        }));
-    }
-
-    private static void validateCreateHashIndexParams(CreateHashIndexParams params, CatalogTableDescriptor table) {
-        validateIndexColumns(params.columns(), table);
-    }
-
-    private static void validateCreateSortedIndexParams(CreateSortedIndexParams params, CatalogTableDescriptor table) {
-        validateIndexColumns(params.columns(), table);
-
-        if (params.collations().size() != params.columns().size()) {
-            throw new IgniteInternalException(
-                    ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                    "Columns collations doesn't match number of columns."
-            );
-        }
-    }
-
-    private static void validateIndexColumns(List<String> indexColumns, CatalogTableDescriptor table) {
-        if (indexColumns.isEmpty()) {
-            throw new IgniteInternalException(
-                    ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                    "No index columns was specified."
-            );
-        }
-
-        Predicate<String> duplicateValidator = Predicate.not(new HashSet<>()::add);
-
-        for (String columnName : indexColumns) {
-            CatalogTableColumnDescriptor columnDescriptor = table.columnDescriptor(columnName);
-
-            if (columnDescriptor == null) {
-                throw new ColumnNotFoundException(columnName);
-            } else if (duplicateValidator.test(columnName)) {
-                throw new IgniteInternalException(
-                        ErrorGroups.Index.INVALID_INDEX_DEFINITION_ERR,
-                        "Can't create index on duplicate columns: {}",
-                        String.join(", ", indexColumns)
-                );
-            }
-        }
-    }
-
     private static void validateAlterTableColumn(
             CatalogTableColumnDescriptor origin,
             CatalogTableColumnDescriptor target,
@@ -969,17 +804,77 @@ public class CatalogManagerImpl extends Producer<CatalogEvent, CatalogEventParam
                 .tableName(params.tableName())
                 .indexName(params.tableName() + "_PK")
                 .columns(params.primaryKeyColumns())
-                .unique()
+                .unique(true)
                 .build();
     }
 
-    private static CatalogHashIndexDescriptor createHashIndexDescriptor(
+    private static CatalogHashIndexDescriptor createPkIndex(
             CatalogTableDescriptor table,
             int indexId,
             CreateHashIndexParams params
     ) {
-        validateCreateHashIndexParams(params, table);
+        validateCreateHashIndexParams(params);
 
-        return CatalogUtils.fromParams(indexId, table.id(), params);
+        validateIndexColumns(table, params);
+
+        return fromParams(indexId, table.id(), params);
+    }
+
+    @Override
+    public void listen(CatalogEvent evt, EventListener<? extends CatalogEventParameters> closure) {
+        listen(evt, (EventListener<CatalogEventParameters>) closure);
+    }
+
+    private static void ensureNoTableOrIndexExistsWithSameName(CatalogSchemaDescriptor schema, String name) {
+        if (schema.index(name) != null) {
+            throw new IndexAlreadyExistsException(schema.name(), name);
+        }
+
+        if (schema.table(name) != null) {
+            throw new TableAlreadyExistsException(schema.name(), name);
+        }
+    }
+
+    private static void validateIndexColumns(CatalogTableDescriptor table, AbstractCreateIndexCommandParams params) {
+        validateColumnsExistInTable(table, params.columns());
+
+        if (params.unique() && !params.columns().containsAll(table.colocationColumns())) {
+            throw new IgniteException(Index.INVALID_INDEX_DEFINITION_ERR, "Unique index must include all colocation columns");
+        }
+    }
+
+    private static void ensureColumnCanBeDropped(
+            CatalogSchemaDescriptor schema,
+            CatalogTableDescriptor table,
+            AlterTableDropColumnParams params
+    ) {
+        validateColumnsExistInTable(table, params.columns());
+
+        List<String> inPrimaryKeyColumns = params.columns().stream()
+                .filter(table::isPrimaryKeyColumn)
+                .collect(toList());
+
+        if (!inPrimaryKeyColumns.isEmpty()) {
+            throw new CatalogValidationException(Table.TABLE_DEFINITION_ERR, "Can't drop primary key columns: " + inPrimaryKeyColumns);
+        }
+
+        Arrays.stream(schema.indexes())
+                .filter(index -> index.tableId() == table.id())
+                .forEach(index -> params.columns().stream()
+                        .filter(index::hasColumn)
+                        .findAny()
+                        .ifPresent(columnName -> {
+                            throw new CatalogValidationException(
+                                    STMT_VALIDATION_ERR,
+                                    format("Can't drop indexed column: [columnName={}, indexName={}]", columnName, index.name()));
+                        }));
+    }
+
+    private static void validateColumnsExistInTable(CatalogTableDescriptor table, Collection<String> columns) {
+        for (String column : columns) {
+            if (table.columnDescriptor(column) == null) {
+                throw new ColumnNotFoundException(column);
+            }
+        }
     }
 }
